# CTC

./: CMakeLists.txt  Copyright.txt  DartConfig.cmake  Readme.txt  ctcConfigure.h.in
Applications/: CMakeLists.txt
Applications/Classification/: .classpath  .project  build.xml  ctc.classification.properties
Applications/Dicom2RVF/: Dicom2RVF.cxx
Applications/Dicom2vtk/: CMakeLists.txt  Dicom2vtk.cxx
Applications/FeatureExtraction/: CMakeLists.txt  FeatureExtractionMethods.h  FeatureExtractionTool.cxx  HistogramFeature.cxx  OrientedVolumeFeature.cxx  SingleScaleEigenstructure.cxx
Applications/Legacy/: CMakeLists.txt
Applications/Legacy/gcolon/: CMakeLists.txt  bvolume.cc  bvolume.h  canny.cc  canny.h  curvature.cc  curvature.h  dilate.cc  dilate.h  elongation.cc  elongation.h  fast_calc_dt.cc  fast_calc_dt.h  free_fvector.cc  free_fvector.h  free_ivector.cc  free_ivector.h  free_matrix.cc  free_matrix.h  gcolon.cc  gcolon.h  grad3d.cc  grad3d.h  invertMatrix.cc  invertMatrix.h  matrix.cc  matrix.h  morph.cc  morph.h  nrerror.cc  nrerror.h  plane.cc  plane.h  rbtree.cc  rbtree.h  read_dcm.cc  read_dcm.h  read_raw.cc  read_raw.h  read_rvf.cc  (+12 more)
Applications/ManualSegmentCorrection/: CMakeLists.txt  ManualSegmentCorrection.cxx
Applications/MatchCandidatePolyp/: CMakeLists.txt  MatchCandidatePolyp.cxx  ctcCSVReader.cxx  ctcCSVReader.h  ctcFinding.h  ctcPolyp.h  ctcPolypSet.h  ctcVoxel.h  ctcVoxelSet.h  test_MatchCandidatePolyp.cxx
Applications/Mqsar/: mqsar_manual.doc
Applications/PolypCoordinateToIndex/: CMakeLists.txt  PolypCoordinateToIndex.cxx
Applications/PolypCorrection/: CMakeLists.txt  PolypCorrection.cxx
Applications/RVFInfo/: CMakeLists.txt  RVFInfo.cxx
Applications/Registration/: CMakeLists.txt  IntensityRegistration.cxx
Applications/SegmentColon/: CMakeLists.txt  SegmentColon.cxx
Applications/TagSubtraction/: CMakeLists.txt  TagSubtraction.cxx
CMake/: GetSubversionRevision.cmake
Code/: CMakeLists.txt
Code/Algorithms/Registration/CenterlineAnalysis/deformVolfromClineFeature22/deformVolfromClineFeature22/: CMakeCache.txt  CMakeLists.txt  ClineGenFeaturingMain.cxx  ClineVoxel.cxx  Dijstra_heap.cxx  Makefile  cmake_install.cmake  deformByCLine.cxx  deformByCLine.h  distance.h  local_maxima.h  moving.m
Code/Algorithms/Registration/CenterlineAnalysis/deformVolfromClineFeature22/deformVolfromClineFeature22/tnt/: jama_qr.h
Code/Algorithms/Registration/deformDiconFromClineFeature2withOneCline2/: CMakeLists.txt  YunaClineVoxel.cxx  YunaDataType.h  YunaDeformByCLine.cxx  YunaDeformByCLine.h  YunaDijstra_heap.cxx  YunaGenerateCline.cxx  YunaHeader.h  YunaMain.cxx  YunaStoreLandmark.cxx
Code/Algorithms/Registration/deformDiconFromClineFeature2withOneCline2/TestInsidePositive/: CMakeLists.txt  SignedDanielssonDistanceMapImageFilter.cxx
Code/Algorithms/Registration/deformDiconFromClineFeature2withOneCline2/tnt/: jama_svd.h
Code/Algorithms/Segmentation/: CMakeLists.txt  ctcDetectAndSegmentPolypsNappi02Filter.cxx  ctcDetectAndSegmentPolypsNappi02Filter.h  ctcSegmentColonFilter.cxx  ctcSegmentColonFilter.h  ctcSegmentColonFilter.txx  ctcSegmentColonWithContrastFilter.cxx  ctcSegmentColonWithContrastFilter.h  ctcSegmentProjectionFilter.cxx  ctcSegmentProjectionFilter.h
Code/Common/: CMakeLists.txt  ctcByteSwap.h  ctcCTCImage.h  ctcCenterlineSpatialObject.cxx  ctcCenterlineSpatialObject.h  ctcCenterlineSpatialObjectPoint.cxx  ctcCenterlineSpatialObjectPoint.h  ctcGaborOperator.h  ctcGaborOperator.txx
Code/Filters/: CMakeLists.txt  ctcGaborImageFilter.h  ctcGaborImageFilter.txx  itkSliceBySliceImageFilter.h
Code/IO/: CMakeLists.txt  ctcCTCImageReader.cxx  ctcCTCImageReader.h  ctcRVFHeader.h  ctcRVFImageIO.cxx  ctcRVFImageIO.h
Code/SlicerModules/: CMakeLists.txt  ColonSegmenter.cxx  ColonSegmenter.xml
Code/SlicerModules/VirtualColon/: CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  SlicerVirtualColon.txt  VCNodeHelper.cpp  VCNodeHelper.hpp  VCPolyp.hpp  VCPolypSet.cpp  VCPolypSet.hpp  VCPredict.hpp  VCPredictSet.cpp  VCPredictSet.hpp  VCVoxel.hpp  VCVoxelSet.cpp  VCVoxelSet.hpp  vtkSlicerViewerInteractorStyle2.cxx  vtkSlicerViewerInteractorStyle2.h  vtkSlicerVirtualColon.h  vtkSlicerVirtualColonGUI.cxx  vtkSlicerVirtualColonGUI.h  vtkSlicerVirtualColonLogic.cxx  vtkSlicerVirtualColonLogic.h  vtkSlicerVirtualColonNode.cxx  vtkSlicerVirtualColonNode.h  vtkSlicerVirtualColonWin32Header.h
Code/SlicerModules/VirtualColon/Testing/: CMakeLists.txt  CSVReader_test.cpp  predict.csv
Documentation/: Template.cxx  Template.h
Documentation/DevelopersGuide/: CTC.bib  CTCDevelopersGuide.tex  Makefile  polypfeatures.bib
KWStyle/: CTC.kws.xml
Reference/GDM3Dcl/: LF3Dfull.hh  Makefile  buildTube.cc  buildTube.cc.temp  buildTube.hh  configFile.cc  configFile.hh  example.spec  filter.cc  filter.hh  gdm3dcl.cc  levelSetEvolve.cc  levelSetEvolve.hh  seeds.cfg  test_tube.cc  tetradecomp.cc  tetradecomp.hh
Reference/HongLi/: COPYING  ChangeLog  INSTALL  Makefile  README  makeinclude  message.eml
Reference/SeedLocator/: Makefile  configFile.cc  configFile.hh  distance.cc  distance.hh  gcolon.cc  mask.cc  mask.hh  seedloc.cc  temp.spec
Reference/imtk/: COPYING  INSTALL  Makefile  README  makeinclude
Scripts/: ExtractCurvatures.py  FilterFeatures.py  SegmentColons.py  build-libs.sh  dcmfetch.sh  xmlgetprop.py
Testing/: CMakeLists.txt
Testing/Code/: CMakeLists.txt
Testing/Code/Algorithms/FeatureExtraction/: CMakeLists.txt  test_ctcFeatureExtraction.cxx  test_ctcMAT4Converter.cxx  test_ctcPrincipleCurvatureExtraction.cxx  test_ctcRawVolumeExtraction.cxx
Testing/Code/Algorithms/Segmentation/: CMakeLists.txt  test_ctcDetectAndSegmentPolypsNappi02Filter.cxx  test_ctcSegmentColonFilter.cxx  test_ctcSegmentColonWithContrastFilter.cxx  test_ctcSegmentProjectionFilter.cxx
Testing/Code/Common/: CMakeLists.txt  test_ctcCenterlineSpatialObject.cxx
Testing/Code/IO/: CMakeLists.txt  test_ctcCTCImageReader.cxx  test_ctcRVFImageIO.cxx
Testing/Data/: README
Utilities/: CMakeLists.txt
Utilities/vul/: CMakeLists.txt  vul_arg.cxx  vul_arg.h
(+2545 files in other folders)
